feat: notification header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,10 @@
     display: block;
 }
 
+.header__navbar-item--has-notify:hover .header__notify{
+    display: block;
+}
+
 .header__navbar-item,
 .header__navbar-item-link{
     display: inline-block;
@@ -126,10 +130,47 @@
     width: 404px;
     border: 1px solid #D3D3D3;
     background-color: var(--white-color);
+    cursor: default;
+    transform-origin: 90% top;
+    animation: headerNotifyGrowth ease-in 0.2s;
+    will-change: opacity, transform;
+    display: none;
 }
+
+.header__notify::before{
+    content: "";
+    border-width: 20px 30px;
+    border-style: solid;
+    border-color: transparent transparent var(--white-color) transparent;
+    position: absolute;
+    right: 4px;
+    top: -27px;
+}
+.header__notify::after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 90px;
+    height: 20px;
+    right: 0;
+    top: -16px;
+}
+
+@keyframes headerNotifyGrowth{
+    from{
+        opacity: 0;
+        transform: scale(0);
+    }
+    to{
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
 .header__notify-header{
     height: 40px;
     background-color: var(--white-color);
+    user-select: none;
 }
  .header__notify-header h3{
     color: #999;
@@ -174,8 +215,9 @@
 .header__notify-name{
     display: block;
     font-size: 1.4rem;
-    color: var(--black-color);
+    color: var(--text-color);
     font-weight: 400;
+    line-height: 1.8rem;
 }
 
 .header__notify-descriotion{
@@ -183,14 +225,20 @@
     font-size: 1.2rem;
     line-height: 1.6rem;
     color: #756F6E;
+    margin-top: 4px;
 }
 
 .header__notify-footer{
-    text-align: center;
+    display: flex;
 }
 
 .header__notify-footer-btn{
     text-decoration: none;
     color: var(--text-color);
-    padding: 16px 16px;
+    width: 100%;
+    padding: 8px 0;
+    margin: auto;
+    font-size: 1.4rem;
+    font-weight: 400;
+    text-align: center;
 }
