--- a/assets/css/bass.css
+++ b/assets/css/bass.css
@@ -42,6 +42,15 @@ html{
         opacity: 1;
     }
 }
+@keyframes growth{
+    from{
+        transform: scale(var(--growth-from));
+    }
+
+    to{
+        transform: scale(var(--growth-to));
+    }
+}
 /* Modal */
 .modal{
     position: fixed;
@@ -50,6 +59,7 @@ html{
     bottom: 0;
     left: 0;
     display: flex;
+    animation: fadeIn linear 0.1s;
 }
 
 .modal__overlay{
@@ -60,9 +70,12 @@ html{
 }
 
 .modal__body{
+    --growth-from: 0.7;
+    --growth-to: 1;
     margin: auto;
     position: relative;
     z-index: 1;
+    animation: growth linear 0.1s;
 }
 
 /* Button style  */
