--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,11 +124,13 @@
 
 /* HEADER NOTIFICATION */
 .header__notify{
+    z-index: 1;
     position: absolute;
     top: 118%;
     right: 0;
     width: 404px;
     border: 1px solid #D3D3D3;
+    border-radius: 2px;
     background-color: var(--white-color);
     cursor: default;
     transform-origin: 90% top;
@@ -426,9 +428,11 @@
     box-shadow: 0 2px 10px #ccc;
     display: none;
     animation: fadeIn ease-in 0.2s;
+    cursor: default;
 }
 
 .header__cart-list::after{
+    cursor: pointer;
     content: "";
     display: block;
     position: absolute;
