--- a/assets/css/bass.css
+++ b/assets/css/bass.css
@@ -193,3 +193,41 @@ html{
 .select-input__link:hover{
     color: var(--primary-color);
 }
+
+/* pagination */
+.pagination{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+}
+
+.pagination-item{
+    margin: 0 12px;
+}
+
+.pagination-item--active .pagination-item__link{
+    color: var(--white-color);
+    background-color: var(--primary-color);
+}
+
+.pagination-item--active .pagination-item__link:hover{
+    filter: brightness(125%);
+}
+
+.pagination-item__link{
+    display: block;
+    text-decoration: none;
+    font-weight: 300;
+    font-size: 2rem; 
+    line-height: 30px;
+    color: #939393;
+    min-width: 40px;
+    height: 30px;
+    text-align: center;
+    border-radius: 2px;
+}
+
+.pagination-item__icon{
+    font-size: 2rem;
+}
